# package-sampling

./: .coveragerc  .editorconfig  .gitignore  .prettierrc  Makefile  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  test.py
package_sampling/: __init__.py
package_sampling/sampling/: __init__.py  up_brewer.py  up_max_entropy.py  up_max_entropy_pi2.py  up_poisson.py  up_systematic.py  up_systematic_pi2.py  up_tille.py  up_tille_pi2.py  upme_pik2_from_pik_w.py  upme_pik_from_q.py  upme_pik_tilde_from_pik.py  upme_q_from_w.py  upme_s_from_q.py
package_sampling/utils/: __init__.py  as_int.py  inclusion_probabilities.py
src/: base.py
src/sampling/: up_brewer.py
tests/: shared_checks.py  test_up_brewer.py  test_up_max_entropy.py  test_up_poisson.py  test_up_systematic.py  test_up_tille.py  test_upme_pik_from_q.py  test_upme_pik_tilde_from_pik.py  test_upme_q_from_w.py  test_upme_s_from_q.py
