[tool.poetry]
name = "package-sampling"
version = "1.0.0"
description = "Python implementation of probability-based sampling algorithms inspired by the R package Sampling."
authors = [
  "Mohammadreza Razavian <smrrazavian@outlook.com>",
  "Bardia Panahbehagh <Panahbehagh@khu.ac.ir>"
]
readme = "README.md"
license = "GPL-3.0-or-later"
homepage = "https://github.com/smrrazavian/package-sampling"
repository = "https://github.com/smrrazavian/package-sampling"

# Explicitly include your package directory
packages = [
  { include = "package_sampling" }
]

[tool.poetry.dependencies]
python = ">=3.8"
numpy = "^1.26"

[tool.poetry.group.dev.dependencies]
pytest = "^8"
pytest-cov = "^6"
black = "^25"
flake8 = "^7"
isort = "^6"
mypy = "^1"
pylint = "^3"
coverage = "^7"
build = "^1.2"
twine = "^6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# ==========================
# Formatting & Linting Tools
# ==========================

[tool.black]
line-length = 79
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true

[tool.flake8]
max-line-length = 88
ignore = [
    "E203",  # Whitespace before ':'
    "W503"   # line break before binary operator
]
exclude = [
    ".git",
    "__pycache__",
    "htmlcov",
    "build",
    "dist",
    "venv",
    ".venv"
]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_calls = true
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true

# ==========================
# Coverage
# ==========================

[tool.coverage.run]
branch = true
source = ["package_sampling"]

[tool.coverage.report]
show_missing = true
skip_covered = true

# ==========================
# Pytest Configuration
# ==========================

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--strict-markers --tb=short --cov=package_sampling --cov-report=term --cov-report=html"
testpaths = ["tests"]
